Fix mobile keyboard jump using non relative page height

--- a/src/routes/style.scss
+++ b/src/routes/style.scss
@@ -7,5 +7,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page {
-  height: calc(100vh - 50px);
+  height: 700px;
 }
